- 
    Bug 
- 
    Resolution: Done
- 
     Not Evaluated Not Evaluated
- 
    5.0.0
- 
    Windows 7
- 
        6b5bbc531b30d8ece25425e39843c6ae1af1d045
Native activeX control gets mouse events when mouse cursor is on top of it even when user is currently in middle of drag that started on a non-native widget. This causes difficulties e.g. when resizing MDI subwindows containing QAxWidgets or dragging such windows around over other QAxWidgets.
- is required for
- 
                    QTBUG-24209 Qt 5.0 - Windows: Fix the QtActiveQt module -         
- Closed
 
-         
| For Gerrit Dashboard: QTBUG-25977 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V | 
| 29353,3 | Implement automatic mouse grabbing on mouse button press. | master | qt/qtbase | Status: MERGED | +2 | 0 | 
| 34238,10 | Windows: Implement automatic mouse capture in QPA. | master | qt/qtbase | Status: MERGED | +2 | 0 |