Implement automatic mouse grabbing on mouse button press.

QWidget::grabMouse() documentation states that Qt automatically grabs
the mouse when a button is pressed and ungrabs it when it is released.
Implemented this functionality to make Qt5 behavior similar to Qt4.

Task-number: QTBUG-25977
Change-Id: I17aa7e8190f4f5224ebc382d62970c86ae492bdb
Reviewed-by: Samuel Rødal <samuel.rodal@nokia.com>
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@nokia.com>

cregit: 6b5bbc531b30d8ece25425e39843c6ae1af1d045 https://github.com/qt/qtbase/commit/6b5bbc531b30d8ece25425e39843c6ae1af1d045